Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8401

modprobe: ERROR: could not insert 'lnet': Unknown symbol in module

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • None
    • 3
    • 9223372036854775807

      If Lustre was compiled with external OFED but then OFED was removed two modules lnet.ko and ksocklnd.ko will not be able to load but actually they don't depend from OFED functionality.

            dmiter Dmitry Eremin (Inactive)
            dmiter Dmitry Eremin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: