LU-8401 lnet: Weakly resolve the symbol dependency on compat

Weakly resolve the symbol dependency on compat in case of
compiled with OFED but compat.ko module doesn't exist.

Change-Id: I038acf5c9a776ee5917fa1ac174083c32e9aa6cb
Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>